--- a/XperiaSStatusBarTogglesRemover/AndroidManifest.xml
+++ b/XperiaSStatusBarTogglesRemover/AndroidManifest.xml
@@ -1,11 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="de.jwahle.xperiasstatusbartogglesremover"
 	android:versionCode="1"
 	android:versionName="1.0" >
 
 	<uses-sdk
 		android:minSdkVersion="16"
-		android:targetSdkVersion="19" />
+		android:targetSdkVersion="16"
+		tools:ignore="OldTargetApi" />
+
+	<uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
 
 	<application
 		android:allowBackup="true"
@@ -20,7 +24,17 @@
 			android:value="2.0*" />
 		<meta-data
 			android:name="xposeddescription"
-			android:value="Removes status bar toggles on Xperia S with Jellybean" />
+			android:value="Xperia S Tweaks for Jellybean" />
+
+		<activity
+			android:name=".PreferencesActivity"
+			android:label="@string/app_name" >
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 	</application>
 
 </manifest>
